--- a/app/src/main/res/layout/map_layout.xml
+++ b/app/src/main/res/layout/map_layout.xml
@@ -10,4 +10,14 @@
         android:layout_height="fill_parent"
         android:id="@+id/map"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|top"
+        android:text="Demo Button"
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
+        android:paddingRight="10dp"
+        android:id="@+id/btnQuery"/>
+
 </FrameLayout>
